--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -1,5 +1,5 @@
-﻿@model List<AutomobileRepairShop.Models.CarPart>
-
+﻿@* @ @model List<AutomobileRepairShop.Models.CarPart> *@
+@model dynamic
 @{
     <!DOCTYPE html>
     <html>
@@ -25,7 +25,7 @@
                     </tr>
                 </thead>
                 <tbody id="partTable">
-                    @foreach (var item in Model)
+                    @foreach (CarPart item in Model.CarParts)
                     {
                         <tr>
                             <td>@Html.DisplayFor(modelItem => item.Id)</td>
@@ -34,13 +34,29 @@
                             <td>$@Html.DisplayFor(modelItem => item.Price)</td>
                             <td>@Html.DisplayFor(modelItem => item.LaborName)</td>
                             <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>
-                            <td><button type="button" class="btn btn-outline-info" itemid="@item.Id" id="btnAddToCart" >Add</button></td>
+                            <td><button type="button" class="btn btn-outline-info" itemid="@item.Id" itemdepart="@item.DepartmentId" itemname="@item.Name" itemprice="@item.Price" itemlaborname="@item.LaborName" itemlaborprice="@item.LaborPrice">Add</button></td>
                         </tr>
                     }
                 </tbody>
         </div>
 
-
+        <div class="container-fluid">
+            <table class="table table-striped table-hover" id="myTable1">
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        
+                    </tr>
+                </thead>
+                <tbody id="partTable1">
+                    
+                </tbody>
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
@@ -58,28 +74,51 @@
         <script >
             var list=[];
             $('.btn').click(function(){
-                //var itemId={Id: $(this).attr('itemid')};
-                var itemId=$(this).attr('itemid');
-                list.push(parseInt(itemId));
+                var itemId={Id: parseInt($(this).attr('itemid'))};
+                //var itemId=$(this).attr('itemid');
+                //list.push(parseInt(itemId));
+                list.push(itemId);
                 var dataToPost=JSON.stringify(list);
-                console.log(dataToPost);
+                //console.log(list);
+                //console.log(dataToPost);
                 $.ajax({
                     async: true,
                     type: 'POST',
-                    datatype: 'JSON',
-                    contentType: 'application/json; charset=utf-8',
+                    dataType: "json",
+                    contentType: "application/json; charset=utf-8",
                     data: dataToPost,
-                    traditional: true,
-                    url: '/Employee/Bills',
+                    url: '/Employee/BillsAdd',
                     success: function(data) {
                         if(data.success){
-                            
-                        }
+
+                        };
                     },
                     error: function() {
                         alert("There is some problem.");
                     }
                 });
+                var table=document.getElementById("myTable1");
+                
+			    var row = table.insertRow(1);
+
+                var cell = $(row.insertCell(0));
+                cell.append($(this).attr('itemid'));
+
+                cell = $(row.insertCell(1));
+                cell.append($(this).attr('itemdepart'));
+
+                cell = $(row.insertCell(2));
+                cell.append($(this).attr('itemname'));
+
+                cell = $(row.insertCell(3));
+                cell.append($(this).attr('itemprice'));
+
+                cell = $(row.insertCell(4));
+                cell.append($(this).attr('itemlaborname'));
+
+                cell = $(row.insertCell(5));
+                cell.append($(this).attr('itemlaborprice'));
+
             });
         </script>
     </body>
