--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -12,34 +12,47 @@
     </head>
     <body>
         <div class="container-fluid">
-            <table class="table table-striped table-hover" id="myTable">
-                <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">DepartmentID</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Labour Description</th>
-                        <th scope="col">Labour Price</th>
-                        <th scope="col">Add to Bill</th>
-                    </tr>
-                </thead>
-                <tbody id="partTable">
-                    @foreach (var item in Model)
-                    {
+            <div>
+                <table class="table table-striped table-hover" id="myTable">
+                    <thead>
                         <tr>
-                            <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                            <td>@Html.DisplayFor(modelItem => item.DepartmentId)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                            <td>$@Html.DisplayFor(modelItem => item.Price)</td>
-                            <td>@Html.DisplayFor(modelItem => item.LaborName)</td>
-                            <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>
-                            <td><button type="button" class="btn btn-outline-info" itemid="@item.Id" id="btnAddToCart" >Add</button></td>
+                            <th scope="col">ID</th>
+                            <th scope="col">DepartmentID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Labour Description</th>
+                            <th scope="col">Labour Price</th>
+                            <th scope="col">Add to Bill</th>
                         </tr>
-                    }
-                </tbody>
+                    </thead>
+                    <tbody id="partTable">
+                        @foreach (var item in Model)
+                        {
+                            <tr id="row-@item.Id">
+                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                <td>@Html.DisplayFor(modelItem => item.DepartmentId)</td>
+                                <td id="name-@item.Id">@Html.DisplayFor(modelItem => item.Name)</td>
+                                <td id="price-@item.Id">$@Html.DisplayFor(modelItem => item.Price)</td>
+                                <td>@Html.DisplayFor(modelItem => item.LaborName)</td>
+                                <td id="lprice-@item.Id">$@Html.DisplayFor(modelItem => item.LaborPrice)</td>
+                                <td><button type="button" class="btn btn-outline-info" itemid="@item.Id" id="btnAddToCart">Add</button></td>
+                            </tr>
+                        }
+                    </tbody>
+            </div>
+            <div class="container-fluid">
+                <!--<p class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Parts to be billed:</p>-->
+                <table class="table table-borderless" id="cartList">
+                    <thead>
+                    <th scope="col">Name</th>
+                    <th scope="col">Part Price</th>
+                    <th scope="col">Labour Price</th>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
         </div>
-
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
@@ -48,18 +61,39 @@
                 crossorigin="anonymous"
                 referrerpolicy="no-referrer"
                 defer>
-                </script>
+        </script>
 
         <script>
             $(document).ready(function() {
                 $('#myTable').DataTable();
             } );
         </script>
-        <script >
+        <script>
             $('.btn').click(function(){
                 var itemId=$(this).attr('itemid');
                 var formData=new FormData();
                 formData.append("ItemId",itemId);
+
+                var name = document.getElementById("name-" + itemId).innerHTML;
+                var price = document.getElementById("price-" + itemId).innerHTML;
+                var lprice = document.getElementById("lprice-" + itemId).innerHTML;
+                console.log(name);
+                var cartTable = document.getElementById("cartList");
+                var newRow = document.createElement('tr');
+                var colName = document.createElement('td');
+                var colPrice = document.createElement('td');
+                var colLprice= document.createElement('td');
+                
+                newRow.appendChild(colName);
+                newRow.appendChild(colPrice);
+                newRow.appendChild(colLprice);
+
+                colName.innerHTML = name;
+                colPrice.innerHTML = price;
+                colLprice.innerHTML = lprice;
+
+                cartTable.appendChild(newRow);
+
 
                 $.ajax({
                     async: true,
@@ -78,6 +112,9 @@
                     }
                 });
             });
+        </script>
+        <script>
+       
         </script>
     </body>
     </html>
