--- a/AutomobileRepairShop/Views/Home/Index.cshtml
+++ b/AutomobileRepairShop/Views/Home/Index.cshtml
@@ -3,6 +3,92 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Image Header -->
+    <div class="w3-display-container w3-animate-opacity">
+        <img src="~/images/tools.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+    </div>
+
+    <!-- Team Container -->
+    <div class="w3-container w3-padding-64 w3-center" id="team">
+        <h2>OUR TEAM</h2>
+        <p>Meet the team:</p>
+
+        <div class="w3-row">
+            <br>
+
+            <div class="w3-quarter">
+                <a href="https://github.com/dragosduma">
+                    <img src="~/images/dragos.jpg" style="width:45%" class="w3-circle w3-hover-opacity">
+                </a>
+                <h3>Duma Dragos</h3>
+                <p>Team Leader</p>
+            </div>
+
+            <div class="w3-quarter">
+                <a href="https://github.com/ediignat">
+                    <img src="~/images/edi.jpg" style="width:45%" class="w3-circle w3-hover-opacity">
+                </a>
+                <h3>Ignat Eduard</h3>
+                <p>Database Developer</p>
+            </div>
+
+            <div class="w3-quarter">
+                <a href="https://github.com/iliechirila">
+                    <img src="~/images/ilie.jpg" style="width:45%" class="w3-circle w3-hover-opacity">
+                </a>
+                <h3>Chirila Radu-Ilie</h3>
+                <p>Software Developer</p>
+            </div>
+
+            <div class="w3-quarter">
+                <a href="https://github.com/RaduComsa13">
+                    <img src="~/images/radu.jpg" style="width:45%" class="w3-circle w3-hover-opacity">
+                </a>
+                <h3>Comsa Radu</h3>
+                <p>Software Developer</p>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Work Row -->
+    <div class="w3-row-padding w3-padding-64" id="services">
+        <div class="w3-quarter">
+            <h2>Our Services</h2>
+            <p></p>
+        </div>
+
+        <div class="w3-quarter">
+            <div class="w3-card w3-white">
+                <img src="~/images/paint.jpg" style="width:100%">
+                <div class="w3-container">
+                    <h3>Quality Paint</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-quarter">
+            <div class="w3-card w3-white">
+                <img src="~/images/parts.jpg" style="width:100%">
+                <div class="w3-container">
+                    <h3>Wide variety of replacement parts</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-quarter">
+            <div class="w3-card w3-white">
+                <img src="~/images/workshop2.jpg" style="width:100%">
+                <div class="w3-container">
+                    <h3>Scheduled maintenance</h3>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
