--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -39,35 +39,28 @@
                     }
                 </tbody>
         </div>
-         
+       
         <div class="container-fluid">
-            <table class="table table-striped table-hover" id="myTable1">
+            <!--<p class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Parts to be billed:</p>-->
+            <table class="table table-borderless" id="myTable1">
                 <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">DepartmentID</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Labour Description</th>
-                        <th scope="col">Labour Price</th>
-                        <th scope="col"></th>
-                    </tr>
+                <th scope="col">Name</th>
+                <th scope="col">Part Price</th>
+                <th scope="col">Labour Price</th>
                 </thead>
-                <tbody id="partTable1">
-                    @foreach (CarPart item in Model.AddedCarParts)
+                <tbody>
+                @foreach (CarPart item in Model.AddedCarParts)
                     {
                         <tr>
-                            <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                            <td>@Html.DisplayFor(modelItem => item.DepartmentId)</td>
                             <td>@Html.DisplayFor(modelItem => item.Name)</td>
                             <td>$@Html.DisplayFor(modelItem => item.Price)</td>
-                            <td>@Html.DisplayFor(modelItem => item.LaborName)</td>
-                            <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>
-                            <td></td>
+                            <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>                            
                         </tr>
                     }
                 </tbody>
+            </table>
         </div>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
@@ -75,14 +68,14 @@
                 crossorigin="anonymous"
                 referrerpolicy="no-referrer"
                 defer>
-                </script>
+        </script>
 
         <script>
             $(document).ready(function() {
                 $('#myTable').DataTable();
             } );
-        </script>
-        <script >
+        </script>        
+        <script>
             var list=[];
             $('.btn').click(function(){
                 var itemId={Id: parseInt($(this).attr('itemid'))};
@@ -109,32 +102,24 @@
                     }
                 });
                 var table=document.getElementById("myTable1");
-                
-			    var row = table.insertRow(1);
+
+                var row = table.insertRow(1);
+
 
                 var cell = $(row.insertCell(0));
-                cell.append($(this).attr('itemid'));
-
-                cell = $(row.insertCell(1));
-                cell.append($(this).attr('itemdepart'));
-
-                cell = $(row.insertCell(2));
                 cell.append($(this).attr('itemname'));
 
-                cell = $(row.insertCell(3));
+                cell = $(row.insertCell(1));
                 cell.append($(this).attr('itemprice'));
 
-                cell = $(row.insertCell(4));
-                cell.append($(this).attr('itemlaborname'));
-
-                cell = $(row.insertCell(5));
+                cell = $(row.insertCell(2));
                 cell.append($(this).attr('itemlaborprice'));
 
             });
             function createbillfunction(){
                 if(list.length<1){
-                    alert("null");
-                }else 
+                    alert("list is null");
+                }else
                 {
                     var dataToPost=JSON.stringify(list);
                     $.ajax({
