--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -1,4 +1,4 @@
-@* @ @model List<AutomobileRepairShop.Models.CarPart> *@
+
 @model dynamic
 @{
     <!DOCTYPE html>
@@ -11,7 +11,7 @@
               referrerpolicy="no-referrer" />
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container-fluid" >
             <table class="table table-striped table-hover" id="myTable">
                 <thead>
                     <tr>
@@ -49,7 +49,7 @@
                 <th scope="col">Labour Price</th>
                 </thead>
                 <tbody>
-                @foreach (CarPart item in Model.AddedCarParts)
+                 @foreach (CarPart item in Model.AddedCarParts)
                     {
                         <tr>
                             <td>@Html.DisplayFor(modelItem => item.Name)</td>
@@ -60,7 +60,6 @@
                 </tbody>
             </table>
         </div>
-        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
@@ -132,7 +131,40 @@
                     });
                 }
             }
+            function emailFunction(){
+                var mail = document.getElementById("emailUser").value;
+                var item = {Email: mail};
+                var dataToPost = JSON.stringify(item);
+                $.ajax({
+                    async: true,
+                    type:'POST',
+                    dataType: "json",
+                    contentType: "application/json; charset=utf-8",
+                    data: dataToPost,
+                    url:'/Employee/SearchEmail',
+                });
+
+                $('#appDrop').trigger('change');
+            }
         </script>
+
+        <div class = "container-fluid">
+            
+                <label for ="emailUser" class="form-label">Search for appointments by email:</label>
+                <input type = "text" class="form-control form-control-lg" id = "emailUser">
+                <button type = "button" onclick = "emailFunction()">Search</button> 
+                
+        </div>
+        <div class = "dropdown" id = "appDrop">
+
+            <button class = "btn-primary btn-secondary dropdown-toggle" type = "button" id="dropdownMenuBtn1" data-bs-toggle="dropdown" aria-expanded="false">See appointments</button>
+            <ul class = "dropdown-menu" aria-labelledby = "dropdownMenuBtn1">
+                @foreach(Appointment item in Model.AppointList)
+                {
+                    <li><a class = "drowpdown-item" href="#"></a>@Html.DisplayFor(modelItem => item.Id) @Html.DisplayFor(modelItem => item.IdUser)</li>
+                }
+            </ul>
+        </div>    
         <button type="button" onclick="createbillfunction()">Create bill</button>
     </body>
     </html>
