--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -1,4 +1,3 @@
-
 @model dynamic
 @{
     <!DOCTYPE html>
@@ -11,126 +10,7 @@
               referrerpolicy="no-referrer" />
     </head>
     <body>
-        <div class="container-fluid" >
-            <table class="table table-striped table-hover" id="myTable">
-                <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">DepartmentID</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Labour Description</th>
-                        <th scope="col">Labour Price</th>
-                        <th scope="col">Add to Bill</th>
-                    </tr>
-                </thead>
-                <tbody id="partTable">
-                    @foreach (CarPart item in Model.CarParts)
-                    {
-                        <tr>
-                            <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                            <td>@Html.DisplayFor(modelItem => item.DepartmentId)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                            <td>$@Html.DisplayFor(modelItem => item.Price)</td>
-                            <td>@Html.DisplayFor(modelItem => item.LaborName)</td>
-                            <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>
-                            <td><button type="button" class="btn btn-outline-info" itemid="@item.Id" itemdepart="@item.DepartmentId" itemname="@item.Name" itemprice="@item.Price" itemlaborname="@item.LaborName" itemlaborprice="@item.LaborPrice">Add</button></td>
-                        </tr>
-                    }
-                </tbody>
-        </div>
-       
-        <div class="container-fluid">
-            <!--<p class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Parts to be billed:</p>-->
-            <table class="table table-borderless" id="myTable1">
-                <thead>
-                <th scope="col">Name</th>
-                <th scope="col">Part Price</th>
-                <th scope="col">Labour Price</th>
-                </thead>
-                <tbody>
-                 @foreach (CarPart item in Model.AddedCarParts)
-                    {
-                        <tr>
-                            <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                            <td>$@Html.DisplayFor(modelItem => item.Price)</td>
-                            <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>                            
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
-                integrity="sha512-BkpSL20WETFylMrcirBahHfSnY++H2O1W+UnEEO4yNIl+jI2+zowyoGJpbtk6bx97fBXf++WJHSSK2MV4ghPcg=="
-                crossorigin="anonymous"
-                referrerpolicy="no-referrer"
-                defer>
-        </script>
-
         <script>
-            $(document).ready(function() {
-                $('#myTable').DataTable();
-            } );
-        </script>        
-        <script>
-            var list=[];
-            $('.btn').click(function(){
-                var itemId={Id: parseInt($(this).attr('itemid'))};
-                //var itemId=$(this).attr('itemid');
-                //list.push(parseInt(itemId));
-                list.push(itemId);
-                var dataToPost=JSON.stringify(list);
-                //console.log(list);
-                //console.log(dataToPost);
-                $.ajax({
-                    async: true,
-                    type: 'POST',
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    data: dataToPost,
-                    url: '/Employee/BillsAdd',
-                    success: function(data) {
-                        if(data.success){
-
-                        };
-                    },
-                    error: function() {
-                        alert("There is some problem.");
-                    }
-                });
-                var table=document.getElementById("myTable1");
-
-                var row = table.insertRow(1);
-
-
-                var cell = $(row.insertCell(0));
-                cell.append($(this).attr('itemname'));
-
-                cell = $(row.insertCell(1));
-                cell.append($(this).attr('itemprice'));
-
-                cell = $(row.insertCell(2));
-                cell.append($(this).attr('itemlaborprice'));
-
-            });
-            function createbillfunction(){
-                if(list.length<1){
-                    alert("list is null");
-                }else
-                {
-                    var dataToPost=JSON.stringify(list);
-                    $.ajax({
-                        async: true,
-                        type: 'POST',
-                        dataType: "json",
-                        contentType: "application/json; charset=utf-8",
-                        data: dataToPost,
-                        url: '/Employee/CreateBills',
-                    });
-                }
-            }
             function emailFunction(){
                 var mail = document.getElementById("emailUser").value;
                 var item = {Email: mail};
@@ -148,24 +28,21 @@
             }
         </script>
 
-        <div class = "container-fluid">
-            
-                <label for ="emailUser" class="form-label">Search for appointments by email:</label>
-                <input type = "text" class="form-control form-control-lg" id = "emailUser">
-                <button type = "button" onclick = "emailFunction()">Search</button> 
-                
+        <div class="container-fluid">
+            <label for="emailUser" class="form-label">Search for appointments by email:</label>
+            <input type="email" class="form-control" id="emailUser">
         </div>
-        <div class = "dropdown" id = "appDrop">
 
-            <button class = "btn-primary btn-secondary dropdown-toggle" type = "button" id="dropdownMenuBtn1" data-bs-toggle="dropdown" aria-expanded="false">See appointments</button>
-            <ul class = "dropdown-menu" aria-labelledby = "dropdownMenuBtn1">
-                @foreach(Appointment item in Model.AppointList)
-                {
-                    <li><a class = "drowpdown-item" href="#"></a>@Html.DisplayFor(modelItem => item.Id) @Html.DisplayFor(modelItem => item.IdUser)</li>
-                }
-            </ul>
-        </div>    
-        <button type="button" onclick="createbillfunction()">Create bill</button>
+        <div class="container-fluid">
+            <button type="button" class="btn btn-primary" onclick="emailFunction()">Search</button>
+        </div>
+
+
+
+        <div class="container-fluid">
+            <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("CarParts", "Employee")'">Create bill for selected appointment</button>
+        </div>
+
     </body>
     </html>
 }
