--- a/AutomobileRepairShop/Views/Shared/CarParts.cshtml
+++ b/AutomobileRepairShop/Views/Shared/CarParts.cshtml
@@ -49,7 +49,7 @@
                     }
                 </tbody>
         </div>
-
+         
         <div class="container-fluid">
             <!--<p class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Parts to be billed:</p>-->
             <table class="table table-borderless" id="myTable1">
@@ -130,11 +130,14 @@
                         dataType: "json",
                         contentType: "application/json; charset=utf-8",
                         data: dataToPost,
-                        url: '/Employee/CreateBills',
+                        url: '@Url.Action("CreateBill","Employee")',
+                        //url: '/Employee/CreateBill',
                     });
                 }
             }
         </script>
+        
+        <button><a href="javascript:;" onclick="createbillfunction()">Click me</a></button> 
     </body>
     </html>
 }
